--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 * {
-    border: 1px solid red;
+    border: 0;
+    background-color: antiquewhite;
 }
 
 .main-container {
@@ -25,4 +26,10 @@ img {
     transform: scale(1.05); /* Enlarge the element on hover */
     transition: transform 0.3s ease; /* Add a smooth transition effect */
     cursor: pointer; /* Change the cursor to a pointer on hover */
+}
+
+#refresh-button {
+    background-color: red;
+    color: white;
+    margin: 20px 0 30px 0;
 }
